crates/engine/src/snapshots/engine__write__generate__set_slot_absent_section.snap
---
source: crates/engine/src/write.rs
expression: out
---
---
status: proposed
date: 2026-05-23
---

# Rate-limit at the gateway

## Context

Per-client limits were enforced ad hoc.

## Decision

Adopt a token bucket per client.

## Consequences

Each service drops its local limiter.
