crates/engine/src/snapshots/engine__write__generate__set_slot_absent_trailing.snap
---
source: crates/engine/src/write.rs
expression: out
---
---
status: proposed
date: 2026-05-23
---

# A decision

## Context

Forces at play.

## Options

Alternatives were weighed and rejected.

## Decision

We centralize.

## Consequences

Local limiters retired.
